force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/fields/Covered__c.field-meta.xml
<CustomField>
    <fullName>Covered__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Covered</label>
    <type>Checkbox</type>
</CustomField>