force-app/main/default/objects/FINS_INS_Product_Insurance_Coverage__c/fields/Product_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Product_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Coverage</label>
    <referenceTo>FINS_Insurance_Product_Coverage__c</referenceTo>
    <relationshipLabel>Insurance Coverages</relationshipLabel>
    <relationshipName>Insurance_Coverages</relationshipName>
    <type>Lookup</type>
</CustomField>